@@ -131,7 +131,7 @@ gimp_parasiterc_save (Gimp *gimp)
   const gchar *header =
     "GIMP parasiterc\n"
     "\n"
-    "This file will be entirely rewritten every time you quit the gimp.";
+    "This file will be entirely rewritten each time you exit.";
   const gchar *footer =
     "end of parasiterc";
 
