@@ -86,7 +86,7 @@ gimp_templates_save (Gimp *gimp)
   const gchar *header =
     "GIMP templaterc\n"
     "\n"
-    "This file will be entirely rewritten every time you quit the gimp.";
+    "This file will be entirely rewritten each time you exit.";
   const gchar *footer =
     "end of templaterc";
 
