@@ -182,7 +182,7 @@ gimp_controllers_save (Gimp *gimp)
   const gchar *header =
     "GIMP controllerrc\n"
     "\n"
-    "This file will be entirely rewritten every time you quit the gimp.";
+    "This file will be entirely rewritten each time you exit.";
   const gchar *footer =
     "end of controllerrc";
 
