@@ -1,5 +1,16 @@
 2006-12-22  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimp-documents.c
+	* app/core/gimp-parasites.c
+	* app/core/gimp-templates.c
+	* app/core/gimp-units.c
+	* app/widgets/gimpcontrollers.c: changed the header that is
+	written to config files that are rewritten on exit.
+
+	* app/tools/gimpiscissorstool.c: comment.
+
+2006-12-22  Sven Neumann  <sven@gimp.org>
+
 	* app/pdb/misc_cmds.c
 	* app/pdb/parasite_cmds.c: changed wording in API docs.
 
